--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -6,7 +6,13 @@ ul {
     height: 100vh;
 }
 
-
+ul #build-skill {
+    background-image: url('/assets/imgs/first-page/minecraft.webp');
+    background-position: center center;
+    background-size: cover;
+    width: 20%;
+    height: 100vh;
+}
 
 
 
