set garden skill

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -14,7 +14,9 @@ ul #build-skill {
     height: 100vh;
 }
 
-
+ul #plant-skill {
+    background-image: url('/assets/imgs/first-page/stardew-valley.webp');
+}
 
 
 
