added background of dev-skill

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -21,7 +21,9 @@ ul #plant-skill {
     background-image: url('/assets/imgs/first-page/stardew-valley.webp');
 }
 
-
+ul #dev-skill {
+    background-image: url('/assets/imgs/first-page/watch-dogs.webp');
+}
 
 
 
