added background of defense-skill

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -25,6 +25,10 @@ ul #dev-skill {
     background-image: url('/assets/imgs/first-page/watch-dogs.webp');
 }
 
+ul #defense-skill {
+    background-image: url('/assets/imgs/first-page/cod-black-ops.webp');
+}
+
 
 
 
