added background of survive-skill

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -29,6 +29,9 @@ ul #defense-skill {
     background-image: url('/assets/imgs/first-page/cod-black-ops.webp');
 }
 
+ul #survive-skill {
+    background-image: url('/assets/imgs/first-page/dayz.webp');
+}
 
 
 
