added background-position in my skill

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -29,6 +29,7 @@ ul #dev-skill {
 
 ul #defense-skill {
     background-image: url('/assets/imgs/first-page/cod-black-ops.webp');
+    background-position: center center;
 }
 
 ul #survive-skill {
