added background-position in my skill

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -34,6 +34,7 @@ ul #defense-skill {
 
 ul #survive-skill {
     background-image: url('/assets/imgs/first-page/dayz.webp');
+    background-position: right center;
 }
 
 
