added new img while convertio.co is not work

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -4,6 +4,8 @@ ul {
     background-color: orange;
     width: 100%;
     height: 100vh;
+    display: flex;
+    /*grid-template-columns: repeat(5, 20%);*/
 }
 
 .skill {
