added background-position on my background skill

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -21,7 +21,7 @@ ul #build-skill {
 
 ul #plant-skill {
     background-image: url('/assets/imgs/first-page/stardew-valley-test.png');
-    background-position: center center;
+    background-position: right center;
 }
 
 ul #dev-skill {
