added properties in main.css

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -55,7 +55,11 @@ ul #survive-skill {
     background-position: left left;
 }
 
-
+.principal-phrase {
+    position: absolute;
+    top:0;
+    z-index: 2;
+}
 
 
 
