--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -60,6 +60,10 @@ ul #survive-skill {
     top:0;
     z-index: 2;
     user-select: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
 }
 
 
