--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -72,3 +72,5 @@ ul #survive-skill {
 
 
 /*--------------skills background end----------*/
+
+/*----------------sections with logo start-----------*/
