added properties in main.css

--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -74,3 +74,11 @@ ul #survive-skill {
 /*--------------skills background end----------*/
 
 /*----------------sections with logo start-----------*/
+
+.sections {
+    display: grid;
+    justify-content: center;
+    position: absolute;
+    bottom: 20%;
+    width: 100%;
+}
