--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -82,3 +82,12 @@ ul #survive-skill {
     bottom: 20%;
     width: 100%;
 }
+
+.sections > div {
+    place-items: center;
+    display: grid;
+    width: 200px;
+    height: 100px;
+    border-radius: 10%;
+    color: #fff;
+}
