--- a/assets/styles/css-parts/main.css
+++ b/assets/styles/css-parts/main.css
@@ -6,12 +6,6 @@ ul {
     display: flex;
 }
 
-@media (max-width: 1100px) {
-    ul {
-        
-    }
-}
-
 li {
     width: inherit;
     height: inherit;
@@ -75,7 +69,41 @@ ul #survive-skill {
     font-size: 2rem;
 }
 
+@media (max-width: 1100px) {
+    ul {
+        height: 100%;
+        flex-wrap: wrap;
+    }
 
+    li {
+        flex-grow: 1;
+        flex-basis: 30%;
+    }
+
+    .top {
+        align-self: flex-start;
+    }
+
+    .bottom {
+        align-self: flex-end;
+    }
+
+    .principal-phrase {
+        position: fixed;
+    }
+}
+
+@media (max-width: 700px) {
+    li {
+        flex-basis: 50%;
+    }
+}
+
+@media (max-width: 500px) {
+    ul {
+        display: block;
+    }
+}
 
 
 
