--- a/assets/styles/css-parts/global.css
+++ b/assets/styles/css-parts/global.css
@@ -3,7 +3,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    /*overflow: hidden;*/
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 li {
